<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.remilapointe.cluedo.activities.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new_alone"
        android:orderInCategory="10"
        android:title="@string/action_new_alone"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new_against_AI"
        android:orderInCategory="20"
        android:title="@string/action_new_against_AI"
        app:showAsAction="never" />

</menu>
