<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/tl_players_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:id="@+id/tr_your_player_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:text="@string/str_which_player"/>
                <Spinner
                    android:id="@+id/spin_your_player_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="25"/>
            </TableRow>

            <TableRow
                android:id="@+id/tr_ok_cancel_players"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <Button
                    android:id="@+id/bt_add_player_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:layout_gravity="center"
                    android:text="@string/str_cancel"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/bt_add_player_ok"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:layout_gravity="center"
                    android:text="@string/str_ok"
                    tools:ignore="ButtonStyle" />

            </TableRow>

        </TableLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
