<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableLayout
        android:id="@+id/tl_players_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/tr_your_player_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/str_which_player"/>
            <Spinner
                android:id="@+id/spin_your_player_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"/>
        </TableRow>

        <!--TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/str_your_name"/>
            <EditText
                android:id="@+id/ed_your_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:maxLength="20" />
        </TableRow -->

        <!--TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/str_playing_with" />
            <Spinner
                android:id="@+id/sp_playing_with"
                android:layout_weight="25"
                android:layout_height="match_parent">
            </Spinner>
        </TableRow -->

        <TableRow
            android:id="@+id/tr_ok_cancel_players"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:id="@+id/bt_add_player_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:layout_gravity="center"
                android:text="@string/str_cancel"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/bt_add_player_ok"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:layout_gravity="center"
                android:text="@string/str_ok"
                tools:ignore="ButtonStyle" />

        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
